sumo/tests/dfrouter/errors/Makefile.am
SUBDIRS =  false_net no_output unknown_option

EXTRA_DIST =  input_detectors.det.xml input_net.net.xml testsuite.dfrouter

